feat: change image build process